# duckdb-raster

./: CMakeLists.txt  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml  build_package.yml
scripts/: pack_linux.sh  pack_macos.sh  pack_windows.ps1
src/: raster.cpp  raster_extension.cpp  raster_functions.cpp
src/include/: raster_functions.hpp  raster_gdal.hpp  raster_register.hpp
test/sql/: raster.test
